java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/SameNameInnerClass.java
<error descr="Implicitly declared class contains no 'main' method">public class SameNameInnerClass {

}

int a = 1;</error>